# CalculApp

./: README.md
CalculApp/: CMakeLists.txt  calcul.cpp  calcul.h  main.cpp
